--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,7 @@
   ],
   "dependencies": {
     "jquery": "^3.1.0",
-    "seiyria-bootstrap-slider": "^9.1.3",
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "ion.rangeSlider": "ionrangeslider#^2.1.4"
   }
 }
